fixed overflow issue

--- a/css/master.css
+++ b/css/master.css
@@ -9,8 +9,9 @@ html, body {
   max-height: 100%;
   max-width: 100%;
   color: white;
-  padding: 0;
-  margin: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow-x: hidden;
   background-color: rgb(200, 201, 201);
   scroll-behavior: smooth;
 }
